--- a/src/styles/swiper-overrides.scss
+++ b/src/styles/swiper-overrides.scss
@@ -3,6 +3,23 @@
   color: #fff; /* your background color */
 }
 .swiper-slide {
-  width: 297.5px;
-  margin-right: 50px;
+  width: 100%;
+}
+
+// .swiper-container {
+//   width: 480px;
+// }
+
+@media screen and (min-width: 640px) {
+  .swiper-slide {
+    width: 297.5px;
+    margin-right: 50px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .swiper-slide {
+    width: 297.5px;
+    margin-right: 50px;
+  }
 }
